logos wrap issue fixed.

--- a/about.css
+++ b/about.css
@@ -66,10 +66,9 @@
 	display: flex;
 	flex: 0 0 auto;
 	flex-flow: row;
-	gap: 1.5rem;
+	gap: 1rem;
 	height: auto;
 	overflow: auto;
-	padding: 0;
 	position: relative;
 	width: 100%;
 	align-items: flex-start;
